fixed where db is stored

--- a/src/Wuzlstats/appsettings.json
+++ b/src/Wuzlstats/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "statsdb" : "Data Source=wuzlstats.db"
+    "statsdb" : "Data Source=data/wuzlstats.db"
   }
 }
